{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 1705,
  "lineage": "5977d7ee-f41d-8bb9-b7b0-7b8576b9a1a7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "konvoy_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:337834004759:loadbalancer/tf-lb-20221122045413611200000006",
            "availability_zones": [
              "us-west-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20221122045413611200000006-607717722.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20221122045413611200000006",
            "idle_timeout": 60,
            "instances": [
              "i-0b292dee4e70f23ab",
              "i-0c2fec1ea8225ed83",
              "i-0ca24e4f630a84c56"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tf-lb-20221122045413611200000006",
            "security_groups": [
              "sg-05988ef31094d7bb3",
              "sg-0f3322bf5e3187aab"
            ],
            "source_security_group": "337834004759/terraform-20221122045315105600000001",
            "source_security_group_id": "sg-0f3322bf5e3187aab",
            "subnets": [
              "subnet-09c5ee1794df661de"
            ],
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_instance.control_plane",
            "aws_security_group.konvoy_control_plane",
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0dac907b7ffe8a9de",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dac907b7ffe8a9de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4f92e7f8ced6024",
            "private_dns": "ip-10-0-123-93.us-west-2.compute.internal",
            "private_ip": "10.0.123.93",
            "public_dns": "ec2-35-90-119-60.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.119.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d738bbb4f25e6985",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0ca24e4f630a84c56",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca24e4f630a84c56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa09cfca3d6ddfb6",
            "private_dns": "ip-10-0-233-81.us-west-2.compute.internal",
            "private_ip": "10.0.233.81",
            "public_dns": "ec2-54-187-138-43.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.138.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b70950e77f84a769",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0b292dee4e70f23ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b292dee4e70f23ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e1fd450faf3072c",
            "private_dns": "ip-10-0-141-215.us-west-2.compute.internal",
            "private_ip": "10.0.141.215",
            "public_dns": "ec2-34-216-207-24.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.207.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019722adbb04e6ee2",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0c2fec1ea8225ed83",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2fec1ea8225ed83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063d6597f762e2572",
            "private_dns": "ip-10-0-139-217.us-west-2.compute.internal",
            "private_ip": "10.0.139.217",
            "public_dns": "ec2-35-90-156-196.us-west-2.compute.amazonaws.com",
            "public_ip": "35.90.156.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0484f309f5d7e4425",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "registry_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0d49c55ac879d5ff1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d49c55ac879d5ff1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc637b2d34855f1e",
            "private_dns": "ip-10-0-20-240.us-west-2.compute.internal",
            "private_ip": "10.0.20.240",
            "public_dns": "ec2-35-92-172-44.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.172.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0aad4e840da33b312",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b2d675ab325e5e2",
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0d2bc45191f9b10e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2bc45191f9b10e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029de76a4d0894ae2",
            "private_dns": "ip-10-0-48-204.us-west-2.compute.internal",
            "private_ip": "10.0.48.204",
            "public_dns": "ec2-52-89-250-221.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.250.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f136186dc6fa6019",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b2d675ab325e5e2",
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0bd3ce3d21874435b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd3ce3d21874435b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091e6ea4fe01294ff",
            "private_dns": "ip-10-0-151-91.us-west-2.compute.internal",
            "private_ip": "10.0.151.91",
            "public_dns": "ec2-35-91-112-66.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.112.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f505d728104443eb",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b2d675ab325e5e2",
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-072530db6d377ce35",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072530db6d377ce35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d49d2af2e69448a6",
            "private_dns": "ip-10-0-141-180.us-west-2.compute.internal",
            "private_ip": "10.0.141.180",
            "public_dns": "ec2-54-201-167-93.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.167.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-050c2685e7d91c984",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b2d675ab325e5e2",
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e87ed6656c4945c7",
            "arn": "arn:aws:ec2:us-west-2:337834004759:instance/i-0ad9f8a753bafb830",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad9f8a753bafb830",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "alex-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09745ab4ca71a5a25",
            "private_dns": "ip-10-0-26-244.us-west-2.compute.internal",
            "private_ip": "10.0.26.244",
            "public_dns": "ec2-35-92-92-168.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.92.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01dfcbe877afc5adb",
                "volume_size": 80,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-09c5ee1794df661de",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b2d675ab325e5e2",
              "sg-05988ef31094d7bb3",
              "sg-09375182801ba2d87",
              "sg-0f9c99539d1263626"
            ]
          },
          "dependencies": [
            "aws_security_group.konvoy_egress",
            "aws_security_group.konvoy_private",
            "aws_security_group.konvoy_ssh",
            "aws_security_group.public_facing_instances",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "konvoy_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:internet-gateway/igw-0e3db55fa206d9863",
            "id": "igw-0e3db55fa206d9863",
            "owner_id": "337834004759",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "konvoy_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:route-table/rtb-055f4a0314788d6ad",
            "id": "rtb-055f4a0314788d6ad",
            "owner_id": "337834004759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3db55fa206d9863",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.konvoy_gateway",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "konvoy_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0099dc543bb2faa86",
            "route_table_id": "rtb-055f4a0314788d6ad",
            "subnet_id": "subnet-09c5ee1794df661de"
          },
          "dependencies": [
            "aws_internet_gateway.konvoy_gateway",
            "aws_route_table.konvoy_public_rt",
            "aws_subnet.konvoy_public",
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-0f3322bf5e3187aab",
            "description": "Allow inbound 6443 for CP.",
            "egress": [],
            "id": "sg-0f3322bf5e3187aab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "terraform-20221122045315105600000001",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-0f9c99539d1263626",
            "description": "Allow all egress communication.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9c99539d1263626",
            "ingress": [],
            "name": "terraform-20221122045315106700000004",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-05988ef31094d7bb3",
            "description": "Allow all communication between instances",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-05988ef31094d7bb3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20221122045315107200000005",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "konvoy_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-09375182801ba2d87",
            "description": "Allow inbound SSH for Konvoy.",
            "egress": [],
            "id": "sg-09375182801ba2d87",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221122045315106100000002",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_facing_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:security-group/sg-02b2d675ab325e5e2",
            "description": "Allow inbound http and https for public facing instances.",
            "egress": [],
            "id": "sg-02b2d675ab325e5e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221122045315106700000003",
            "name_prefix": "terraform-",
            "owner_id": "337834004759",
            "revoke_rules_on_delete": false,
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "konvoy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:subnet/subnet-09c5ee1794df661de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.0/16",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c5ee1794df661de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "337834004759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "vpc_id": "vpc-0ad590d8605d26288"
          },
          "dependencies": [
            "aws_vpc.konvoy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "konvoy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:337834004759:vpc/vpc-0ad590d8605d26288",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0867263c21f142001",
            "default_route_table_id": "rtb-04f52727d0f07e8b3",
            "default_security_group_id": "sg-003f74f76801d7c88",
            "dhcp_options_id": "dopt-36131d50",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad590d8605d26288",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f52727d0f07e8b3",
            "owner_id": "337834004759",
            "tags": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            },
            "tags_all": {
              "expiration": "4h",
              "owner": "alexchrisramos"
            }
          }
        }
      ]
    }
  ]
}